crates/cli/tests/snapshots/snapshot_tests__codeclimate_unlisted_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unlisted-dependency",
    "description": "Package 'chalk' is imported but not listed in package.json",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "a9c13fc2f98abb9e",
    "location": {
      "path": "src/logger.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
