crates/cli/tests/snapshots/snapshot_tests__codeclimate_unresolved_imports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unresolved-import",
    "description": "Import './missing' could not be resolved",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "b3c3560b946d82a9",
    "location": {
      "path": "src/index.ts",
      "lines": {
        "begin": 3
      }
    }
  }
]
