crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_enum_members_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-enum-member",
    "description": "Enum member 'Status.Deprecated' is never referenced",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "4fdc52289547d8e7",
    "location": {
      "path": "src/enums.ts",
      "lines": {
        "begin": 8
      }
    }
  }
]
