crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_exports_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-export",
    "description": "Export 'helperFn' is never imported by other modules",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "6b7fb5f6ae546edb",
    "location": {
      "path": "src/utils.ts",
      "lines": {
        "begin": 10
      }
    }
  }
]
