crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_files_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-file",
    "description": "File is not reachable from any entry point",
    "categories": [
      "Bug Risk"
    ],
    "severity": "major",
    "fingerprint": "cf1a29e15c023d0d",
    "location": {
      "path": "src/dead.ts",
      "lines": {
        "begin": 1
      }
    }
  }
]
