crates/cli/tests/snapshots/snapshot_tests__codeclimate_unused_optional_deps_only.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/unused-optional-dependency",
    "description": "Package 'fsevents' is in optionalDependencies but never imported",
    "categories": [
      "Bug Risk"
    ],
    "severity": "minor",
    "fingerprint": "5ce60c2d71e2d6ad",
    "location": {
      "path": "package.json",
      "lines": {
        "begin": 5
      }
    }
  }
]
