crates/cli/tests/snapshots/snapshot_tests__grouped_duplication_codeclimate_directory.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: json_str
---
[
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 1 (11 lines, 3 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "f325a5d5cff33aa9",
    "location": {
      "path": "src/a.ts",
      "lines": {
        "begin": 10
      }
    },
    "group": "src"
  },
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 1 (11 lines, 3 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "9204dfb93536af7a",
    "location": {
      "path": "src/b.ts",
      "lines": {
        "begin": 5
      }
    },
    "group": "src"
  },
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 1 (11 lines, 3 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "a2ecd3354aecd720",
    "location": {
      "path": "lib/c.ts",
      "lines": {
        "begin": 30
      }
    },
    "group": "src"
  },
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 2 (8 lines, 2 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "64c8198eedf046c3",
    "location": {
      "path": "lib/x.ts",
      "lines": {
        "begin": 1
      }
    },
    "group": "lib"
  },
  {
    "type": "issue",
    "check_name": "plow/code-duplication",
    "description": "Code clone group 2 (8 lines, 2 instances)",
    "categories": [
      "Duplication"
    ],
    "severity": "minor",
    "fingerprint": "1156d7fd76fc9d2c",
    "location": {
      "path": "lib/y.ts",
      "lines": {
        "begin": 1
      }
    },
    "group": "lib"
  }
]
